--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="settings_string">Settings</string>
     <string name="empty"></string>
     <string name="hello_blank_fragment">fSADFSADAF</string>
+    <string name="developer_string">Developer Tools</string>
 </resources>
